src/lexical_analysis/tests/snapshots/monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_strings_case6.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::LexicalAnalysis::from(code)"

---
Ok(
    [
        Let,
        Identifier {
            literal: "file",
        },
        Assign,
        String {
            literal: "\\tmp\\file.txt\n",
        },
        EndOfFile,
    ],
)
